frontend/src/assets/sass/backlogs/_master_backlog.sass
/*-- copyright
 * OpenProject is an open source project management software.
 * Copyright (C) the OpenProject GmbH
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License version 3.
 *
 * OpenProject is a fork of ChiliProject, which is a fork of Redmine. The copyright follows:
 * Copyright (C) 2006-2013 Jean-Philippe Lang
 * Copyright (C) 2010-2013 the ChiliProject Team
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 *
 * See COPYRIGHT and LICENSE files for more details.  ++
 */

$op-backlogs-header--points-min-width: 5rem
$op-backlogs-header--points-min-width-narrow: 2rem

.controller-backlogs\/backlog.action-show,
.controller-backlogs\/backlog.action-details
  @include extended-content--bottom

.op-sprint-header
  display: grid
  grid-template-columns: 1fr minmax($op-backlogs-header--points-min-width, max-content) auto
  grid-template-areas: "collapsible actions menu"
  align-items: center

  &--actions,
  &--menu
    margin-left: var(--stack-gap-normal)
    align-self: flex-start
    // Unfortunately, the invisible button style bites us here again.
    margin-top: -6px


.op-backlogs-story
  display: grid
  grid-template-columns: 1fr minmax($op-backlogs-header--points-min-width, max-content) auto
  grid-template-rows: auto auto
  grid-template-areas: "info_line points menu" "subject subject subject"
  align-items: center
  margin-top: calc(-1 * var(--base-size-4))
  margin-bottom: var(--base-size-4)

.op-backlogs-story--points
  margin-left: var(--stack-gap-normal)
  font-variant-numeric: tabular-nums

.op-backlogs-story--menu
  margin-left: var(--stack-gap-normal)

.op-backlogs-story--subject
  align-self: start // Align to top of second row
  word-wrap: break-word
  overflow-wrap: break-word

.op-backlogs-page
  display: block
  height: 100%
  container-name: backlogsListsContainer
  container-type: inline-size

.op-sprint-planning-container
  display: flex
  flex-direction: row
  gap: var(--stack-gap-normal)
  height: 100%
  align-items: stretch
  overflow: hidden


.op-sprint-planning-lists
  display: flex
  flex-direction: column
  gap: var(--stack-gap-normal)
  flex: 1 1 100%
  min-height: 0
  overflow-y: auto
  overflow-x: hidden
  padding-top: var(--stack-padding-normal)
  padding-bottom: var(--stack-padding-normal)

//------------------ Sprint planning divider (side-by-side only) ----
@container backlogsListsContainer (min-width: 655px)
  .op-sprint-planning-lists:not(:last-child)
    border-right: 1px solid var(--borderColor-default)
    padding-right: var(--stack-gap-normal)

//------------------ Mobile responsive styling -----------------------
@container backlogsListsContainer (max-width: 654px)
  .op-backlogs-points-label
    display: none

  .op-backlogs-story
    grid-template-columns: 1fr minmax($op-backlogs-header--points-min-width-narrow, max-content) auto

  .op-sprint-planning-container
    height: unset
    overflow: auto
    flex-direction: column

  .op-sprint-planning-lists
    padding-top: 0

